--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -94,3 +94,11 @@ img {
     clip: rect(0, 0, 0, 0);
     border: 0;
 }
+
+.main-content {
+    /* AJOUT CRITIQUE : Pousser tout le contenu de la page vers le bas pour dégager le Header. */
+    padding-top: 75px;
+    padding-bottom: 50px;
+    min-height: 100vh;
+}
+
