--- a/src/css/layout/section.css
+++ b/src/css/layout/section.css
@@ -164,3 +164,9 @@
     list-style: none;
     margin-top: 0;
 }
+
+.section--banner {
+    max-width: none !important;
+    padding: 0 !important;
+    margin-top: 0px;
+}
