--- a/src/css/layout/section.css
+++ b/src/css/layout/section.css
@@ -1,10 +1,52 @@
 /* Fichier : src/css/layout/section.css */
 
 /* 1. CONFIGURATION GÉNÉRALE (Alignement) */
-.section,
-.programmation{
-        margin-top: 200px; 
+.section {
+    /* Marge supérieure standard pour séparer les sections (1/4 de l'ancienne valeur) */
+    margin-top: var(--space-4xl);
+    /* Utilisation d'une variable (ex: 64px) */
+    padding-left: 45px;
+    padding-right: 45px;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    box-sizing: border-box;
 }
+
+.programmation {
+    margin-top: 175px;
+}
+
+/* Décalage pour la section d'introduction (image bannière) */
+.section--intro {
+    margin-top: 70px;
+}
+
+/* Bannière pleine largeur (image touche les bords) */
+.section--intro {
+    max-width: none;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.section--intro .section__header {
+    width: 100vw;
+    max-width: 100vw;
+    margin-left: calc(50% - 50vw);
+    margin-right: calc(50% - 50vw);
+    box-sizing: border-box;
+}
+
+.section--intro .section__image--banner {
+    width: 100%;
+    height: auto;
+    display: block;
+    object-fit: cover;
+    border-radius: 0;
+    box-shadow: none;
+}
+
 .infos,
 .partners {
     padding-left: 45px;
@@ -20,6 +62,39 @@
 /* 2. CONTENU TEXTE & IMAGES */
 .section__content {
     margin-bottom: var(--space-xl);
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.section__title {
+    font-family: var(--font-titles);
+    font-size: 2rem;
+    font-weight: 700;
+    color: var(--noir);
+    margin: 0 0 20px 0;
+    line-height: 1.2;
+    text-transform: none;
+    margin-left: -30px;
+    margin-right: -30px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.section__text {
+    font-family: var(--font-body);
+    font-size: 1.4rem;
+    color: var(--gris-texte);
+    line-height: 1.6;
+    margin: 0 0 15px 0;
+    text-align: left;
+    margin-left: -30px;
+    margin-right: -30px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.section__text:last-child {
+    margin-bottom: 0;
 }
 
 .section__image {
